# Technion_projects

atam/: ex1.asm  ex2.asm  ex3.asm  ex4.asm  ex5.asm
data structures/ex1/: AVLTreeTest.cpp  AVL_tree.h  CMakeLists.txt  CarDealershipManager.cpp  CarDealershipManager.h  car_element.cpp  car_element.h  in.txt  library.cpp  main.cpp  model_element.cpp  model_element.h  reset_car_element.cpp  reset_car_element.h  sale_element.cpp  sale_element.h
data structures/ex1/tests/rand_tests/: run_tests.py
data structures/ex2/: Agency.cpp  Agency.h  CMakeLists.txt  CarAgenciesManager.h  Car_Agencies_Manager.cpp  Car_Agencies_Manager.h  Car_Element.cpp  Car_Element.h  DynamicArray.h  Dynamic_Array.h  Rank_Tree.h  Rank_tree.h  Sale_Element.cpp  Sale_Element.h  agency_type.h  car_type.h  library2.cpp  main.cpp  sold_type.h  union_find.h
data structures/ex2/tests/rand_tests/: diff_log.txt  run_tests.py  valgrind_log.txt
mtm/ex1/: .gitignore.txt  CMakeLists.txt  date.c  date.h  dry.docx  event.c  event.h  event_manager.c  makefile  member.c  member.h  priority_queue  priority_queue.c
mtm/ex1/tests/: all_tests.c  event_manager_example_tests.c  event_manager_tests.c  pq_example_tests.c
mtm/ex2/: eventManager.py  event_manager.i  src_file
mtm/ex3/: CMakeLists.txt  dry.cpp
mtm/ex3/partA/: date.c  date_wrap.cpp  date_wrap.h  exceptions.cpp  exceptions.h
mtm/ex3/partB/: base_event.cpp  base_event.h  closed_event.cpp  closed_event.h  custom_event.cpp  custom_event.h  event_container.cpp  event_container.h  festival.cpp  festival.h  iterator.h  linked_list.h  node.h  one_time_event.h  open_event.cpp  open_event.h  ptr_vector.h  recurring_event.h
mtm/ex3/partC/: schedule.cpp  schedule.h
mtm/ex3/provided/: README.md  date.c  date.h  test_partA.cpp  test_partB.cpp  test_partC.cpp
